--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{"REWRITES":[{"SOURCE":"/(.*)","DESTINATION":"/"}]}
+{
+    "version":2,
+    "builds": [ 
+        {"*.html", "use":"@vercel/node"}
+     ],
+     "routes": [
+        {
+            "src":"/(.*)",
+            "dest": "/"
+        }
+     ]
+}
